--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   string_validator: ^0.1.4
   swipedetector: ^1.2.0
   url_launcher: ^5.7.10
+  file_picker: ^2.1.7
 
 dev_dependencies:
   flutter_test:
